--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.16.4",
     "express-graphql": "^0.7.1",
     "graphql": "^14.1.1",
+    "node-fetch": "^2.3.0",
     "xml2js": "^0.4.19"
   }
 }
